JavaCC/Declaration/DeclarationParser2.jj
PARSER_BEGIN(DeclarationParser2)

public class DeclarationParser2 {  
    public static void main(String args[]) throws ParseException {
        DeclarationParser2 parser = new DeclarationParser2(System.in);
        parser.item();
    }
}
PARSER_END(DeclarationParser2)

void item() : {} {
      LOOKAHEAD( declaration() )
      declaration() { System.out.println("declaration found"); }
    | definition()  { System.out.println("definition found");  }
}   
void declaration() : {} {
    <IDENTIFIER> "(" paramList() ")" ";"
}
void definition() : {} {
    <IDENTIFIER> "(" paramList() ")" body()
}
void paramList() : {} {
      neParamList()
    | { /* epsilon */ }
}
void neParamList() : {} {
       LOOKAHEAD(2) <IDENTIFIER> "," neParamList()
     | <IDENTIFIER>
}
void body() : {} {
    "{" stmntList() "}"
}
void stmntList() : {} {
       stmnt() stmntList()
     | { /* epsilon */ }
}
void stmnt() : {} {
    "to be done" ";"
}

// forget about white space
SKIP: { " " | "\t" | "\r" | "\n" }

TOKEN: {
  <IDENTIFIER: (["a"-"z", "A"-"Z"])+>
}
